--- a/index.html
+++ b/index.html
@@ -29,11 +29,23 @@
 </div>
 <footer id="footer">
   <p class="text-bottom"> <strong>BOOKINGS:</strong></p>
-  <p class="text-bottom email" id="email"> Email: <a href="mailto:sam.raha@hotmail.co.uk">theloosecut@gmail.com</a></p>
+  <p class="text-bottom email" id="email"> Email: <a href="mailto:theloosecut@gmail.com">theloosecut@gmail.com</a></p>
 </footer>
 </div>
-<script src="main.js"></script>
+<script>
+  if (screen && screen.width > 500) {
+    document.write('<script type="text/javascript" src="main.js"><\/script>');
+  }
+</script>
+<script>
+  if (screen && screen.width < 500 ) {
+    document.write('<script type="text/javascript" src="mobile.js"><\/script>');
+  }
+</script>
+<!-- <script>
+  if (window.matchMedia("(orientation: landscape)").matches) {
+    document.write('<script type="text/javascript" src="mobile.js"><\/script>');
+  }
+</script> -->
 </body>
 </html>
-
-
