social media icons colour change

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="logo">
       <div class="image"> </div>
     </div>
+    <div class="merch">
+      <a href="https://theloosecut.bigcartel.com/">MERCH</a>
+    </div>
     <div class="social">
       <ul>
       <li><a href="https://en-gb.facebook.com/TheLooseCut/"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
@@ -29,7 +32,7 @@
 </div>
 <footer id="footer">
   <p class="text-bottom"> <strong>BOOKINGS:</strong></p>
-  <p class="text-bottom email" id="email"> Email: <a href="mailto:theloosecut@gmail.com">theloosecut@gmail.com</a></p>
+  <p class="text-bottom email" id="email"> Email: <a href="mailto:theloosecut@gmail.com"><span>theloosecut@gmail.com</span></a></p>
 </footer>
 </div>
 <script>
