--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
 <body>
 <div id="container">
   <div id="main">
-    <div class="logo">
+    <div class="header-container">
+    <div class="header-link">
+      <a href="https://theloosecut.bigcartel.com/" target="_blank">MERCH</a>
+    </div>
+    <div class="header-link">
+      <a href="https://linktr.ee/theloosecut" target="_blank">TICKETS</a>
+    </div>
+
+  </div>
+    <!-- <div class="logo">
       <div class="image"> </div>
-    </div>
-    <div class="merch">
+    </div> -->
+    <!-- <div class="merch">
       <a href="https://theloosecut.bigcartel.com/">MERCH</a>
-    </div>
+    </div> -->
     <div class="social">
       <ul>
       <li><a href="https://en-gb.facebook.com/TheLooseCut/"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
@@ -25,20 +34,20 @@
       <li><a href="https://www.instagram.com/theloosecut/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
       <li><a href="https://www.youtube.com/channel/UCi3Rhs98cK0xaQIR-aw0wHw/featured"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
       <li><a href="https://open.spotify.com/artist/17JWTOMZY9IglBlQfJwiM1?si=yQ1E6QlRRb2C2SJPQyt5bg"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
-      <li><a href="https://itunes.apple.com/gb/artist/the-loose-cut/1029177866"><i class="fa fa-music" aria-hidden="true"></i></a></li>
+      <li><a href="https://itunes.apple.com/gb/artist/the-loose-cut/1029177866"><i class="fa fa-music music-note" aria-hidden="true"></i></a></li>
       </ul>
     </div>
   </div>
 </div>
 <footer id="footer">
   <p class="text-bottom"> <strong>MANAGEMENT, BOOKINGS & MEDIA:</strong></p>
-  <p class="text-bottom email management" id="email"> Mark Kelly <span class="management-hide"><strong>|</strong></span> <a href="mailto:mark@oldstick.co.uk"><span>mark@oldstick.co.uk</span></a><span> <span class="management-hide"><strong>|</strong></span> 07989946718</span></p>
+  <p class="text-bottom email management" id="email"> Mark Kelly <span class="management-hide"><strong>|</strong></span> <a href="mailto:mark.kelly@stradamusic.com"><span>mark.kelly@stradamusic.com</span></a><span> <span class="management-hide"><strong>|</strong></span> 07989946718</span></p>
 
   <!-- <p class="text-bottom"> <strong></strong>GENERAL ENQUIERIES</p> -->
   <p class="text-bottom email" id="email"> <a href="mailto:theloosecut@gmail.com"><span>theloosecut@gmail.com</span></a></p>
 </footer>
 </div>
-<script>
+<!-- <script>
   if (screen && screen.width > 500) {
     document.write('<script type="text/javascript" src="dist/main.js"><\/script>');
   }
@@ -47,6 +56,6 @@
   if (screen && screen.width < 500 ) {
     document.write('<script type="text/javascript" src="dist/mobile.js"><\/script>');
   }
-</script>
+</script> -->
 </body>
 </html>
