--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </div> -->
     <div class="social">
       <ul>
-      <li><a href="https://en-gb.facebook.com/TheLooseCut/"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
-      <li><a href="https://twitter.com/theloosecut?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-      <li><a href="https://www.instagram.com/theloosecut/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-      <li><a href="https://www.youtube.com/channel/UCi3Rhs98cK0xaQIR-aw0wHw/featured"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-      <li><a href="https://open.spotify.com/artist/17JWTOMZY9IglBlQfJwiM1?si=yQ1E6QlRRb2C2SJPQyt5bg"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
-      <li><a href="https://itunes.apple.com/gb/artist/the-loose-cut/1029177866"><i class="fa fa-music music-note" aria-hidden="true"></i></a></li>
+      <li><a href="https://en-gb.facebook.com/TheLooseCut/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
+      <li><a href="https://twitter.com/theloosecut?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.instagram.com/theloosecut/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.youtube.com/channel/UCi3Rhs98cK0xaQIR-aw0wHw/featured" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+      <li><a href="https://open.spotify.com/artist/17JWTOMZY9IglBlQfJwiM1?si=yQ1E6QlRRb2C2SJPQyt5bg" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
+      <li><a href="https://itunes.apple.com/gb/artist/the-loose-cut/1029177866" target="_blank"><i class="fa fa-music music-note" aria-hidden="true"></i></a></li>
       </ul>
     </div>
   </div>
